[package]
name = "injrs"
version = "0.1.2"
description = "DLL injector library and tool written in Rust. Rust 实现的DLL注入工具/库。"
authors = ["Zoe <hi@zoe.im>", "langyo <langyo.china@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[[example]]
name = "eat-hook"
crate-type = ["cdylib"]

[[example]]
name = "source"


[dependencies.winapi]
version = "0.3.9"
features = [
    "windef",
    "winnt",
    "winuser",
    "errhandlingapi",
    "memoryapi",
    "ntdef", 
    "tlhelp32",
    "psapi", 
    "securitybaseapi",
    "libloaderapi", 
    "synchapi", 
    "wow64apiset",
    "processthreadsapi", 
    "handleapi", 
    "winbase",
    "impl-default",
]
